--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>Mon premier site</title>
+  <title>Mon site en cours de construction</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1>Bienvenue sur mon site</h1>
-  <p>Ceci est ma première page web.</p>
+  <p>Ceci est la preuve q'un imbecile nommée RNRN (je ne prefere pas en dire plus) a fait ce site web.</p>
 </body>
 </html>
 
